--- a/style.css
+++ b/style.css
@@ -5,10 +5,31 @@
   box-sizing: border-box;
 }
 
-.main-visual{
+.main-visual01{
   width: 100%;
   height: 200px;
   background-image: url(img/box1.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.main-visual02{
+  width: 100%;
+  height: 200px;
+  background-image: url(img/box2.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.main-visual03{
+  width: 100%;
+  height: 200px;
+  background-image: url(img/box3.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.main-visual04{
+  width: 100%;
+  height: 200px;
+  background-image: url(img/box4.jpg);
   background-size: cover;
   background-position: center;
 }
